brush-parser/src/parser/snapshots/brush_parser__parser__peg__tests__parse_here_doc_with_no_trailing_newline.snap
---
source: brush-parser/src/parser/peg.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cat <<EOF\nSomething\nEOF",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cat",
                  loc: Some(SourceSpan(
                    start: SourcePosition(
                      index: 0,
                      line: 1,
                      column: 1,
                    ),
                    end: SourcePosition(
                      index: 3,
                      line: 1,
                      column: 4,
                    ),
                  )),
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(HereDocument(None, IoHereDocument(
                    requires_expansion: true,
                    here_end: Word(
                      value: "EOF",
                      loc: Some(SourceSpan(
                        start: SourcePosition(
                          index: 6,
                          line: 1,
                          column: 7,
                        ),
                        end: SourcePosition(
                          index: 9,
                          line: 1,
                          column: 10,
                        ),
                      )),
                    ),
                    doc: Word(
                      value: "Something\n",
                      loc: Some(SourceSpan(
                        start: SourcePosition(
                          index: 10,
                          line: 2,
                          column: 1,
                        ),
                        end: SourcePosition(
                          index: 23,
                          line: 3,
                          column: 4,
                        ),
                      )),
                    ),
                  ))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
